neutron (2:10.0.0-0ubuntu5) UNRELEASED; urgency=medium

  * d/pydist-overrides: Dropped no longer needed. 
  * d/rules:
    - Removed missing patch
    - Configure sqlite database using pkgos-fix-config-default.
    - Removed missing binaries to exclude.
  * d/neutron-metadata-agent.install: Remove neutron-metadata-proxy
    has been replaced by haproxy.

 -- Chuck Short <zulcss@ubuntu.com>  Tue, 28 Mar 2017 10:01:44 -0400

neutron (2:10.0.0-0ubuntu4) zesty; urgency=medium

  * d/neutron-common.install, d/neutron-dhcp-agent.install:
    Remove cron jobs since they will cause a race when
    using an L3 agent. The L3 agent cleans up after itself now. 
    (LP: #1623664)

 -- Chuck Short <zulcss@ubuntu.com>  Mon, 27 Mar 2017 12:42:06 -0400

neutron (2:10.0.0-0ubuntu3) zesty; urgency=medium

  * d/rules: Switch to direct use of ostestr.
  * d/p/fix-db-path.patch: Drop patch, we do want to run unit tests with
    an in-memory sqlite db otherwise they stomp all over each other.

 -- James Page <james.page@ubuntu.com>  Fri, 17 Mar 2017 17:25:06 +0000

neutron (2:10.0.0-0ubuntu2) zesty; urgency=medium

  * d/control: Bump minimum pecan version to 1.1.2 (LP: #1668578).

 -- James Page <james.page@ubuntu.com>  Wed, 15 Mar 2017 10:39:34 +0000

neutron (2:10.0.0-0ubuntu1) zesty; urgency=medium

  * New upstream release for OpenStack Ocata.

 -- Corey Bryant <corey.bryant@canonical.com>  Wed, 22 Feb 2017 09:56:20 -0500

neutron (2:10.0.0~rc2-0ubuntu1) zesty; urgency=medium

  * d/patches/fix-db-path.patch: Dont use an in-memory sqlite
    database for unit tests. 
  * New upstream milestone for Ocata. 

 -- Chuck Short <zulcss@ubuntu.com>  Mon, 20 Feb 2017 10:17:59 -0500

neutron (2:10.0.0~rc1-0ubuntu1) zesty; urgency=medium

  * debian/control: Add python-weakrefmethod. 
  * New upstream milestone for Ocata.

 -- Chuck Short <zulcss@ubuntu.com>  Mon, 06 Feb 2017 13:03:35 -0500

neutron (2:10.0.0~b3-0ubuntu1) zesty; urgency=medium
