@@ -7,6 +7,7 @@ neutron (2:10.0.0-0ubuntu5) UNRELEASED; urgency=medium
     - Removed missing binaries to exclude.
   * d/neutron-metadata-agent.install: Remove neutron-metadata-proxy
     has been replaced by haproxy.
+  * d/rules: Stop using ostestr to run the unit tests.
 
  -- Chuck Short <zulcss@ubuntu.com>  Tue, 28 Mar 2017 10:01:44 -0400
 
